
[ UNSTABLE BETA VERSION - please see README.1ST for some more info ]

[ WARNING: there are known bugs in the win32/pe format which cause
  crashes on a number of exes ]

Changes in 1.91 beta (XX Sep 2003):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING
  * djgpp2/coff: added support for recent binutils versions
  * watcom/le: don't crash on files without relocations

Changes in 1.90 beta (11 Nov 2002):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING
  * implemented several new options for finer compression control:
      `--all-methods', `--all-filters' and `--brute'
  * ps1/exe: new format - UPX now supports PlayStation One programs
  * linux/386: added the option `--force-execve'
  * vmlinuz/386: better kernel detection and sanity checks
  * re-synced with upx 1.24 branch
  * documentation updates

Changes in 1.11 beta (20 Dec 2000):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING
  * vmlinuz/386: new format - UPX now supports bootable linux kernels
  * linux/elf386: added the new ELF direct-to-memory executable format - no
    more temp files are needed for decompression!
  * linux/sh386: added the new shell direct-to-memory executable format - no
    more temp files are needed for decompression!
  * reduced overall memory requirements during packing
  * quite a number of internal source code rearrangements

==================================================================

Changes in 1.24 (07 Nov 2002)
  * djgpp2/coff: stricter check of the COFF header to work around a
    problem with certain binutils versions

Changes in 1.23 (05 Sep 2002)
  * atari/tos: fixed an unpacking problem where a buffer was too
    small (introduced in 1.22)
  * linux/386: don't give up too early if a single block turns out
    to be incompressible
  * documentation: added some quick tips how to achieve the best
    compression ratio for the final release of your application
  * fixed a rare situation where the exit code was not set correctly
